[package]
name = "steam_game_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.61"
dotenv = "0.15.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
